# pv281-giglog

./: .env.template  .gitignore  .gitlab-ci.yml  .prettierrc  Cargo.toml  Dockerfile  README.Docker.md  README.md  docker-compose.yaml  package-lock.json  package.json  tailwind.config.js
assets/: styles.css
migrations/: 20250102111306_create_venue_table.down.sql  20250102111306_create_venue_table.up.sql  20250102111326_seed_venue_data.down.sql  20250102111326_seed_venue_data.up.sql  20250103100842_create_user_table.down.sql  20250103100842_create_user_table.up.sql  20250103111126_seed_user_data.down.sql  20250103111126_seed_user_data.up.sql  20250103111909_create_event_table.up.sql  20250103113159_seed_event_data.down.sql  20250103113159_seed_event_data.up.sql  20250103121805_create_position_category_table.down.sql  20250103121805_create_position_category_table.up.sql  20250103122035_seed_position_category_data.down.sql  20250103122035_seed_position_category_data.up.sql  20250103170808_create_job_position_table.down.sql  20250103170808_create_job_position_table.up.sql  20250103171307_seed_job_position_data.down.sql  20250103171307_seed_job_position_data.up.sql  20250103184832_create_employment_table.down.sql  20250103184832_create_employment_table.up.sql  20250103184904_seed_employment_data.down.sql  20250103184904_seed_employment_data.up.sql  20250103190445_create_worked_hours_table.down.sql  20250103190445_create_worked_hours_table.up.sql  20250103190501_seed_worked_hours_data.down.sql  20250103190501_seed_worked_hours_data.up.sql  (+4 more)
src/: app.rs  auth.rs  error.rs  (+9 more)
(+139 files in other folders)
