[package]
name = "pv281-giglog"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
axum = { version = "0.7.0", features = ["macros"] }
serde = "1.0.210"
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tower-livereload = "0.9.4"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "bigdecimal", "chrono" ] }
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
askama_axum = "0.4.0"
anyhow = "1.0.93"
axum-login = "0.16.0"
thiserror = "2.0.3"
tower-sessions = { version = "0.13.0", default-features = false, features = ["signed"] }
tower-sessions-sqlx-store = {version = "0.14.2", features = ["postgres"]}
uuid = { version = "1.11.0", features = ["v4"] } 
axum-messages = "0.7.0"
password-auth = "1.0.0"
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] } 
validator = { version = "0.19.0", features = ["derive"]}
lazy_static = "1.5.0"
regex = "1.11.1"
once_cell = "1.20.2"
argon2 = "0.5.3"
async-trait = "0.1.86"
